--- a/_posts/2015-01-13-Mou.md
+++ b/_posts/2015-01-13-Mou.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: NAT TRAVERSAL （1）
+title: NAT TRAVERSAL222222
 description: "介绍了NAT穿透技术，目前在实现了UDP方式，TCP正在研究中"
 category: sample-post
 tags: [UDP, NAT, 渗透]
